# Biped

./: CMakeLists.txt  package.xml
config/mini_cheetah/: inekf_estimator.yaml  ros_comm.yaml
include/: ContactArray.h  PosVelEstimator.h  PosVelEstimator_vicon.h  bikebot_control.h  bikebot_timer.h  control.h  gait_generator.h  leg_controller.h  licycle_config.h  motor_drive.h  opmath.h  stance_leg_controller.h  stance_leg_controllerqp.h  swing_leg_controller.h
node/: bikebot_control copy.cpp  bikebot_control.cpp  biped_walk.py  calibrate.cpp  mini_cheetah.cpp  ros_subscriber.cpp  ros_subscriber.h
src/: PosVelEstimator.cpp  PosVelEstimator_vicon.cpp  control.cpp  gait_generator.cpp  leg_controller.cpp  motor_drive.cpp  openzen_test.cpp  opmath.cpp  stance_leg_controller.cpp  stance_leg_controller1.cpp  stance_leg_controllerqp.cpp  swing_leg_controller.cpp
